# www-requef

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  generate_requirements  pyproject.toml  readme.md  requirements.txt
src/: main.py
src/templates/: 404.html  index.html
www_requef/: config.py  dependencies.py  main.py
www_requef/spotify/: client.py  dependencies.py  persistent_token_storage.py  routes.py  spotify_controller.py  token_storage.py  utils.py
www_requef/templates/: index.html
www_requef/templates/spotify/: login_rejected.html  login_success.html
